main slider mobile padding and show nav icons on mobile

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -149,6 +149,8 @@ p
 
 .mainSliderContainer
 	padding: 0 18px
+	@media only screen and (max-width : 480px)
+		padding: 0
 
 .owl-carousel
 	margin: auto
@@ -160,8 +162,8 @@ p
 	color: $topMenu
 	// padding: 0 25px
 	width: 100%
-	@media only screen and (max-width : 480px)
-		display: none
+	// @media only screen and (max-width : 480px)
+		// display: none
 	.owl-prev-my, .owl-next-my
 		outline: none
 		position: absolute
